--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Reemplaza los placeholders en game.js con los secretos
-      - name: Replace EmailJS Credentials
+      # 2. Reemplaza todos los placeholders
+      - name: Replace Placeholders
         run: |
-          sed -i 's/EMAILJS_USER_ID_PLACEHOLDER/${{ secrets.EMAILJS_USER_ID }}/g' game.js
-          sed -i 's/EMAILJS_SERVICE_ID_PLACEHOLDER/${{ secrets.EMAILJS_SERVICE_ID }}/g' game.js
-          sed -i 's/EMAILJS_TEMPLATE_ID_PLACEHOLDER/${{ secrets.EMAILJS_TEMPLATE_ID }}/g' game.js
+          sed -i 's/GAME_TITLE_PLACEHOLDER/${{ secrets.GAME_TITLE }}/g' index.html
+          sed -i 's/EMAILJS_USER_ID_PLACEHOLDER_V2/${{ secrets.EMAILJS_USER_ID }}/g' game.js
+          sed -i 's/EMAILJS_SERVICE_ID_PLACEHOLDER_V2/${{ secrets.EMAILJS_SERVICE_ID }}/g' game.js
+          sed -i 's/EMAILJS_TEMPLATE_ID_PLACEHOLDER_V2/${{ secrets.EMAILJS_TEMPLATE_ID }}/g' game.js
 
       # 3. Despliega la carpeta completa a la rama 'gh-pages'
       - name: Deploy to gh-pages
@@ -33,4 +34,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
-          # La opción 'publish_dir: .' publica todo el contenido del repositorio
